--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cupcake">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leagel Solution with DaisyUI</title>
-    <!-- Tailwind & Daisy UI CDN -->
+    <title>Legal with DaisyUI</title>
+    <!-- Tailwind CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css"
       rel="stylesheet"
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -48,5 +47,7 @@
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <h2>hello</h2>
+  </body>
 </html>
