--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             colors: {
               'gradient-start': '#FF8938',
               'gradient-end': '#F00',
+              'main-color': '#B68C5A',
             },
           },
         },
@@ -48,6 +49,77 @@
     </style>
   </head>
   <body>
-    <h2>hello TW</h2>
+    <!--header section -->
+    <header class="max-w-screen-xl mx-auto px-4 md:px-8 lg:px-12 py-10">
+      <!-- Navbar start -->
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <label tabindex="0" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </label>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-[#707070]"
+            >
+              <li>
+                <a>Home</a>
+              </li>
+              <li>
+                <a>Services <i class="fa-solid fa-angle-right"></i></a>
+              </li>
+              <li>
+                <a>Cases <i class="fa-solid fa-angle-right"></i></a>
+              </li>
+              <li>
+                <a>Blog <i class="fa-solid fa-angle-right"></i></a>
+              </li>
+              <li>
+                <a>Contact Us <i class="fa-solid fa-angle-right"></i></a>
+              </li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost normal-case text-xl"
+            ><img src="./images/logo2.png" alt=""
+          /></a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li>
+              <a>Home </a>
+            </li>
+            <li>
+              <a>Services <i class="fa-solid fa-angle-right"></i></a>
+            </li>
+            <li>
+              <a>Cases <i class="fa-solid fa-angle-right"></i></a>
+            </li>
+            <li>
+              <a>Blog <i class="fa-solid fa-angle-right"></i></a>
+            </li>
+            <li>
+              <a>Contact Us <i class="fa-solid fa-angle-right"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <a class="btn bg-main-color">Free Consultation</a>
+        </div>
+      </div>
+      <!-- navbar end -->
+    </header>
   </body>
 </html>
