--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
               'gradient-start': '#FF8938',
               'gradient-end': '#F00',
               'main-color': '#B68C5A',
+              'btn-color': '#B68C5A',
             },
           },
         },
@@ -120,6 +121,205 @@
         </div>
       </div>
       <!-- navbar end -->
+      <!-- Banner part start -->
+      <div class="mt-14">
+        <div
+          class="py-28 hero my-30"
+          style="background-image: url('./images/banner.png')"
+        >
+          <div class="bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-lg">
+              <h1 class="my-7 text-5xl font-extrabold font-ebgaramond">
+                We Provide Effective <br />
+                Legal Solutions
+              </h1>
+              <p class="mb-5 font-poppins">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour.
+              </p>
+              <div>
+                <!-- <input
+                class="rounded-lg h-12 w-3/4"
+                type="text"
+                placeholder="Type here"
+              /> -->
+                <input
+                  type="text"
+                  placeholder="Search your services"
+                  class="input rounded-md w-full max-w-xs text-[#A0A0A0] mx-auto lg:mr-8"
+                />
+                <button class="btn bg-main-color rounded-md border-none">
+                  Search
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
+    <main class="max-w-screen-xl mx-auto px-4 md:px-8 lg:px-12 py-10">
+      <div>
+        <h2
+          class="text-4xl text-[#414040] font-extrabold font-ebgaramond text-center"
+        >
+          The Legal Practice Area
+        </h2>
+        <p class="font-poppins text-center lg:w-2/4 mx-auto mt-6">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour.
+        </p>
+        <div class="grid grid-cols-1 md:grid-cols-3 pt-12">
+          <!-- card1 start -->
+          <div class="card rounded-none border-r-2 border-b-2 lg:py-12">
+            <figure class="px-10 pt-10 py-5">
+              <img src="./images/business.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2
+                class="card-title font-ebgaramond text-4xl text-[#414040] font-extrabold"
+              >
+                Business Law
+              </h2>
+              <p class="font-poppins text-[#707070] py-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-btn-color">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card1 end -->
+          <!-- card2 start -->
+          <div
+            class="card bg-gradient-to-r from-[#F3F3F3] to-[#f3f3f3] rounded-none border-[#E7E7E7] border-r-2 border-b-2 lg:py-12"
+          >
+            <figure class="px-10 pt-10 py-5">
+              <img src="./images/criminal.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2
+                class="card-title font-ebgaramond text-4xl text-[#414040] font-extrabold"
+              >
+                Criminal Law
+              </h2>
+              <p class="font-poppins text-[#707070] py-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-btn-color">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card2 end -->
+          <!-- card3 start -->
+          <div class="card rounded-none border-b-2 lg:py-12">
+            <figure class="px-10 pt-10 py-5">
+              <img src="./images/child.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2
+                class="card-title font-ebgaramond text-4xl text-[#414040] font-extrabold"
+              >
+                Child Support
+              </h2>
+              <p class="font-poppins text-[#707070] py-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-btn-color">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card3 end -->
+          <!-- card4 start -->
+          <div class="card rounded-none border-r-2 lg:py-12">
+            <figure class="px-10 pt-10 py-5">
+              <img src="./images/child.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2
+                class="card-title font-ebgaramond text-4xl text-[#414040] font-extrabold"
+              >
+                Child Support
+              </h2>
+              <p class="font-poppins text-[#707070] py-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-btn-color">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card4 end -->
+          <!-- card5 start -->
+          <div class="card rounded-none border-r-2 lg:py-12">
+            <figure class="px-10 pt-10 py-5">
+              <img src="./images/child.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2
+                class="card-title font-ebgaramond text-4xl text-[#414040] font-extrabold"
+              >
+                Child Support
+              </h2>
+              <p class="font-poppins text-[#707070] py-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-btn-color">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card5 end -->
+          <!-- card6 start -->
+          <div class="card rounded-none lg:py-12">
+            <figure class="px-10 pt-10 py-5">
+              <img src="./images/child.png" alt="Shoes" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2
+                class="card-title font-ebgaramond text-4xl text-[#414040] font-extrabold"
+              >
+                Child Support
+              </h2>
+              <p class="font-poppins text-[#707070] py-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-btn-color">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- card6 end -->
+        </div>
+      </div>
+    </main>
   </body>
 </html>
