--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
       </div>
     </header>
     <main class="max-w-screen-xl mx-auto px-4 md:px-8 lg:px-12 py-10">
+      <!-- leagel part start -->
       <div>
         <h2
           class="text-4xl text-[#414040] font-extrabold font-ebgaramond text-center"
@@ -320,6 +321,54 @@
           <!-- card6 end -->
         </div>
       </div>
+      <!-- leagel part end -->
+      <!-- Testimoial part start -->
+      <div class="py-16">
+        <h2
+          class="text-4xl text-[#414040] font-extrabold font-ebgaramond text-center"
+        >
+          What Our Client Say
+        </h2>
+        <p class="font-poppins text-center lg:w-2/4 mx-auto mt-6">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour.
+        </p>
+        <!-- slider start -->
+        <div class="my-14">
+          <div class="carousel w-full">
+            <div id="slide1" class="carousel-item relative w-full">
+              <img src="./images/slider-1.jpg" class="w-full" />
+              <div
+                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+              >
+                <a href="#slide4" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+              <img src="./images/slider-2.jpg" class="w-full" />
+              <div
+                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+              >
+                <a href="#slide1" class="btn btn-circle">❮</a>
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+              <img src="./images/slider-3.jpg" class="w-full" />
+              <div
+                class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+              >
+                <a href="#slide2" class="btn btn-circle">❮</a>
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Slider end -->
+      </div>
+      <!-- Testimoial part end -->
     </main>
   </body>
 </html>
