--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           extend: {
             backgroundImage: {
               'slider-image1': "url('./images/s-1.jpg')",
-              'slider-image2': "url('./images/s-1.jpg')",
-              'slider-image3': "url('./images/s-1.jpg')",
+              'slider-image2': "url('./images/s2.jpg')",
+              'slider-image3': "url('./images/s3.jpg')",
             },
             colors: {
               'gradient-start': '#FF8938',
@@ -452,6 +452,90 @@
         <!-- Slider end -->
       </div>
       <!-- Testimoial part end -->
+      <!-- FAQ Start -->
+      <div>
+        <h2
+          class="text-4xl text-[#414040] font-extrabold font-ebgaramond text-center"
+        >
+          Frequently Asked Questions
+        </h2>
+        <p class="font-poppins text-center lg:w-2/4 mx-auto mt-6">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour.
+        </p>
+        <div
+          class="flex flex-col md:flex-row justify-between items-center gap-16 my-12"
+        >
+          <!-- left part start -->
+          <div class="flex-1">
+            <div class="collapse collapse-plus bg-base-200 mb-5">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>Are application fee waivers available?</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 mb-5">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Are application fee waivers available?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, .
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 mb-5">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>Are application fee waivers available?</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 mb-5">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Are application fee waivers available?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, .
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Are application fee waivers available?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered alteration in some
+                  form, by injected humour, .
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- left part end -->
+          <!-- right part start -->
+          <div class="flex-1">
+            <img src="./images/faq.png" alt="" />
+          </div>
+          <!-- right part end -->
+        </div>
+      </div>
+      <!-- FAQ end -->
     </main>
   </body>
 </html>
