--- a/index.html
+++ b/index.html
@@ -536,6 +536,144 @@
         </div>
       </div>
       <!-- FAQ end -->
+      <!-- Contact with us start -->
+      <div>
+        <h2
+          class="text-4xl text-[#414040] font-extrabold font-ebgaramond text-center"
+        >
+          Contact With Us
+        </h2>
+        <p class="font-poppins text-center lg:w-2/4 mx-auto mt-6">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour.
+        </p>
+        <div
+          class="flex flex-col md:flex-row justify-between items-center gap-8 mt-14"
+        >
+          <!-- left part start -->
+          <div class="flex-1">
+            <div class="grid grid-cols-1 md:grid-cols-2 items-center">
+              <!-- card1 start -->
+              <div
+                class="card bg-gradient-to-r from-[#F3F3F3] to-[#f3f3f3] rounded-none border-[#E7E7E7] border-r-2 border-b-2"
+              >
+                <figure class="px-10 py-4">
+                  <img
+                    src="./images/address.png"
+                    alt="Shoes"
+                    class="rounded-xl"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2
+                    class="card-title font-ebgaramond text-2xl text-[#414040] font-extrabold"
+                  >
+                    Address
+                  </h2>
+                  <p class="font-poppins text-[#707070] pt-2">
+                    A108 Adam Street, New York, NY 535022
+                  </p>
+                </div>
+              </div>
+              <!-- card1 end -->
+              <!-- card2 start -->
+              <div
+                class="card bg-gradient-to-r from-[#F3F3F3] to-[#f3f3f3] rounded-none border-[#E7E7E7] border-b-2"
+              >
+                <figure class="px-10 py-4">
+                  <img src="./images/call.png" alt="Shoes" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2
+                    class="card-title font-ebgaramond text-2xl text-[#414040] font-extrabold"
+                  >
+                    Call Us
+                  </h2>
+                  <p class="font-poppins text-[#707070] pt-2">
+                    A108 Adam Street, New York, NY 535022
+                  </p>
+                </div>
+              </div>
+              <!-- card2 end -->
+              <!-- card3 start -->
+              <div
+                class="card bg-gradient-to-r from-[#F3F3F3] to-[#f3f3f3] rounded-none border-[#E7E7E7] border-r-2"
+              >
+                <figure class="px-10 py-4">
+                  <img
+                    src="./images/address.png"
+                    alt="Shoes"
+                    class="rounded-xl"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2
+                    class="card-title font-ebgaramond text-2xl text-[#414040] font-extrabold"
+                  >
+                    Email Us
+                  </h2>
+                  <p class="font-poppins text-[#707070] pt-2">
+                    A108 Adam Street, New York, NY 535022
+                  </p>
+                </div>
+              </div>
+              <!-- card3 end -->
+              <!-- card4 start -->
+              <div
+                class="card bg-gradient-to-r from-[#F3F3F3] to-[#f3f3f3] rounded-none border-[#E7E7E7]"
+              >
+                <figure class="px-10 py-4">
+                  <img
+                    src="./images/email.png"
+                    alt="Shoes"
+                    class="rounded-xl"
+                  />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2
+                    class="card-title font-ebgaramond text-2xl text-[#414040] font-extrabold"
+                  >
+                    Working Hours
+                  </h2>
+                  <p class="font-poppins text-[#707070] pt-2">
+                    A108 Adam Street, New York, NY 535022
+                  </p>
+                </div>
+              </div>
+              <!-- card4 end -->
+            </div>
+          </div>
+          <!-- left part end -->
+          <!-- right part start -->
+          <div class="flex-1">
+            <div>
+              <input
+                type="text"
+                placeholder="Your Name"
+                class="input input-bordered rounded-md w-full max-w-lg bg-[#F3F3F3] h-[72px] mb-7"
+              />
+              <input
+                type="text"
+                placeholder="Your Email"
+                class="input input-bordered rounded-md w-full max-w-lg bg-[#F3F3F3] h-[72px] mb-7"
+              />
+              <input
+                type="text"
+                placeholder="Subject"
+                class="input input-bordered rounded-md w-full max-w-lg bg-[#F3F3F3] h-[72px] mb-7"
+              />
+              <input
+                type="text"
+                placeholder="Your Message"
+                class="input input-bordered input-xl rounded-md w-full max-w-lg bg-[#F3F3F3] h-[160px] mb-7"
+              />
+            </div>
+          </div>
+          <!-- right part end -->
+        </div>
+      </div>
+      <!-- contact with us end -->
     </main>
   </body>
 </html>
